# veritable-2.0.0

./: README.md
chiase/boxung/: English.nlf  English.nsh  GetHDDSerial.nsdinc  ItalcCore.cpp  taomasoischool.nsi~  welcome-page.gpl
chiase/boxung/diskid32/: SAsasa.includes  diskid32.dsp
chiase/italc-2.0.0/contrib/: italc.admx
chiase/italc-2.0.0/contrib/en-US/: italc.adml
chiase/veritable-2.0.0/: README  vERITABLE.nsi.in  veritable.spec.in  veritableconfig.h.in
chiase/veritable-2.0.0/b/: CMakeCache.txt  CPackConfig.cmake  cmake_install.cmake  vERITABLE.nsi
chiase/veritable-2.0.0/b/ica/: cmake_install.cmake  qrc_ica.cxx
chiase/veritable-2.0.0/b/ima/: ui_MainWindow.h  ui_Overview.h  ui_RunCommandsDialog.h  ui_Snapshots.h  ui_TextMessageDialog.h
chiase/veritable-2.0.0/b/imc/: qrc_imc.cxx
chiase/veritable-2.0.0/b/lib/: Makefile  cmake_install.cmake  qrc_VeritableCore.cxx  qt_qm.qrc  ui_PasswordDialog.h
chiase/veritable-2.0.0/b/veritable-2.0.0/: COPYING
chiase/veritable-2.0.0/contrib/en-US/: veritable.adml
chiase/veritable-2.0.0/doc/: CrossCompilingForWindows.txt
chiase/veritable-2.0.0/ica/src/: DemoClientSlave.h  DesktopAccessPermission.h  IcaMain.cpp  IcaSlave.h  LocalSystemIca.cpp  ScreenLockSlave.cpp  ScreenLockSlave.h  ScreenLockSlaveLauncher.h  WindowsService.cpp
chiase/veritable-2.0.0/ica/win32/: CMakeLists.txt
chiase/veritable-2.0.0/ima/dialogs/: Config.ui  MainWindow.ui  SupportDialog.ui
chiase/veritable-2.0.0/ima/src/: ClassroomManager.h  ConfigWidget.cpp  MainToolBar.cpp  MainToolBar.h  RemoteControlWidget.h  SideBar.h
chiase/veritable-2.0.0/imc/: CMakeLists.txt  imc.rc.in
chiase/veritable-2.0.0/imc/src/: FileSystemBrowser.cpp  KeyFileAssistant.cpp  KeyFileAssistant.h  KeyFileAssistantModePage.cpp  LogonGroupEditor.cpp  MainWindow.cpp  MainWindow.h  main.cpp
chiase/veritable-2.0.0/lib/: CMakeLists.txt
chiase/veritable-2.0.0/lib/include/: DsaKey.h  (+3 more)
italc-sis/: Gioi thieu  sis-school.ppt  gioithieu.doc  gioithieu.odt
italc-sis/CloneVDI-exe-2.05/: CloneCLI.bat  CloneVDI.ini  release notes.txt
italc-sis/DONE/veritable-2.0.0/ima/: CMakeLists.txt  veritable.1  veritable.rc.in
italc-sis/DONE/veritable-2.0.0/ima/data/: veritable.desktop.in  veritable.in
italc-sis/DONE/veritable-2.0.0/ima/dialogs/: ClientSettingsDialog.ui  RunCommandsDialog.ui
italc-sis/DONE/veritable-2.0.0/ima/src/: ClassroomManager.cpp  Client.cpp  Client.h  Dialogs.cpp  Dialogs.h  MainWindow.cpp  OverviewWidget.h  SideBarWidget.cpp  SnapshotList.cpp  ToolButton.h
italc-sis/boxung/: PasswordDialog.cpp  autoplayischool.nsddef  autoplayischool.nsdinc  header.xcf  iTALC.nsi.in  iTALC.nsi.in_v1  taomasoischool.nsi  vi.qm  vi.ts
italc-sis/boxung/diskid32/: SAsasa.files  makedisk.bat
italc-sis/eclipse-SDK-3.7.2-win32-x86_64/eclipse/: artifacts.xml
italc-sis/ischool-2.0.0/: COPYING  ChangeLog  INSTALL  README  TODO  iSCHOOL.nsi.in  ischool.spec.in  ischoolconfig.h.in
italc-sis/ischool-2.0.0/contrib/: README.txt  ischool.admx
italc-sis/ischool-2.0.0/doc/: AutomatedSetupWithIMC.txt  ControllingIMCAtTheCommandline.txt  CrossCompilingForWindows.txt  UsingPathVariables.txt
italc-sis/ischool-2.0.0/ica/: CMakeLists.txt  ica.1  ica.rc  ica.rc.in
italc-sis/ischool-2.0.0/ica/helpers/: CMakeLists.txt
italc-sis/ischool-2.0.0/ima/: ischool.1  ischool.rc  ischool.rc.in
italc-sis/ischool-2.0.0/imc/: CMakeLists.txt  imc.rc  imc.rc.in
italc-sis/italc-2.0.0/: COPYING  COPYING.txt
italc-sis/italc-2.0.0/contrib/: README.txt
italc-sis/qtcreator-build/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  vERITABLE.nsi  veritable.cbp  veritable.spec
italc-sis/qtcreator-build/ima/: veritable.rc
italc-sis/qtcreator-build/imc/: Makefile  cmake_install.cmake
italc-sis/qtcreator-build/lib/: Makefile  VeritableCore.qrc.depends  cmake_install.cmake  qrc_VeritableCore.cxx  qrc_qt_qm.cxx  qt_qm.qrc.depends  ui_AboutDialog.h  ui_PasswordDialog.h
italc-sis/veritable-2.0.0/: CMakeLists.txt  ChangeLog  TODO  vERITABLE.nsi.in~
italc-sis/veritable-2.0.0 - OpenInQt/: INSTALL
italc-sis/veritable-2.0.0 - OpenInQt/contrib/: veritable.admx
italc-sis/veritable-2.0.0 - OpenInQt/doc/: AutomatedSetupWithIMC.txt  ControllingIMCAtTheCommandline.txt
italc-sis/veritable-2.0.0 - OpenInQt/ica/: ica.1  ica.rc  ica.rc.in
italc-sis/veritable-2.0.0/cmake/modules/: DetectMachine.cmake
italc-sis/veritable-2.0.0/doc/: UsingPathVariables.txt
italc-sis/veritable-2.0.0/ica/src/: DesktopAccessPermission.cpp  MessageBoxSlave.cpp  MessageBoxSlave.h  RfbLZORLE.cpp  VeritableVncServer.cpp
italc-sis/veritable-2.0.0/ica/win32/: ultravnc-veritable.cpp  ultravnc.cpp
italc-sis/veritable-2.0.0/ica/win32/addon/ms-logon/authSSP/: EventLogging.cpp  vncAccessControl.cpp
italc-sis/veritable-2.0.0/ica/win32/rdr/: ZlibInStream.cxx
italc-sis/veritable-2.0.0/ica/win32/winvnc/vnchooks/: VNCHooks.cpp
italc-sis/veritable-2.0.0/ica/win32/winvnc/winvnc/: vncMultiMonitor.cpp  vncclient.cpp  vncdesktop.cpp  vncserver.cpp
italc-sis/veritable-2.0.0/ica/x11/x11vnc/: screen.c
italc-sis/veritable-2.0.0/ima/dialogs/: Overview.ui  RemoteLogonDialog.ui
italc-sis/veritable-2.0.0/ima/src/: MainWindow.h  OverviewWidget.cpp  RemoteControlWidget.cpp  RunCommandsDialog.cpp  SideBarWidget.h  SnapshotList.h  ToolButton.cpp
italc-sis/veritable-2.0.0/imc/: imc.rc
italc-sis/veritable-2.0.0/imc/Forms/: LogonGroupEditor.ui  MainWindow.ui
italc-sis/veritable-2.0.0/imc/src/: ImcCore.cpp  ImcCore.h  SystemConfigurationModifier.cpp  Win32AclEditor.h
italc-sis/veritable-2.0.0/lib/include/: FastQImage.h  LockWidget.h  SocketDevice.h  SystemKeyTrapper.h  VeritableCore.h  VeritableVncConnection.h
italc-sis/veritable-2.0.0/lib/include/Ipc/: Core.h  SlaveLauncher.h
italc-sis/veritable-2.0.0/lib/resources/: cs.ts  de.ts  el.ts  fi.ts  sk.ts  vi.qm  vi.ts
italc-sis/veritable-2.0.0/lib/src/: AuthenticationCredentials.cpp  Logger.cpp  VeritableCoreConnection.cpp
italc-sis/veritable-2.0.0/lib/src/Configuration/: XmlStore.cpp
italc-sis/veritable-2.0.0/lib/src/Ipc/: SlaveLauncher.cpp
(+639 files in other folders)
