FILE(GLOB veritable_INCLUDES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.h)
FILE(GLOB veritable_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/*.cpp)
FILE(GLOB veritable_UI ${CMAKE_CURRENT_SOURCE_DIR}/dialogs/*.ui)
SET(QRC_FILE ${CMAKE_CURRENT_SOURCE_DIR}/veritable.qrc)
QT4_WRAP_CPP(veritable_MOC_out ${veritable_INCLUDES})
QT4_WRAP_UI(veritable_UIC_out ${veritable_UI})
QT4_ADD_RESOURCES(veritable_RCC_out ${QRC_FILE})
QT4_TRANSLATIONS_FOR_QRC(${QRC_FILE} ${veritable_SOURCES} ${veritable_INCLUDES})

IF(VERITABLE_BUILD_WIN32)
	SET(WINRC "${CMAKE_CURRENT_BINARY_DIR}/veritablerc.obj")
	ADD_CUSTOM_COMMAND(OUTPUT ${WINRC}
						COMMAND ${WINDRES}
							-I${CMAKE_CURRENT_SOURCE_DIR}
							-o${WINRC}
							-i${CMAKE_CURRENT_BINARY_DIR}/veritable.rc
						DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/veritable.rc)

ENDIF(VERITABLE_BUILD_WIN32)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR} ${CMAKE_CURRENT_SOURCE_DIR}/src)
ADD_EXECUTABLE(veritable ${veritable_UIC_out} ${veritable_SOURCES} ${veritable_INCLUDES} ${veritable_MOC_out} ${veritable_RCC_out} ${WINRC})
TARGET_LINK_LIBRARIES(veritable VeritableCore)

INSTALL(TARGETS veritable RUNTIME DESTINATION bin)

IF(VERITABLE_BUILD_WIN32)
	SET_TARGET_PROPERTIES(veritable PROPERTIES LINK_FLAGS -mwindows)
ENDIF(VERITABLE_BUILD_WIN32)

